--- a/src/main/resources/templates/include/head.html
+++ b/src/main/resources/templates/include/head.html
@@ -57,12 +57,12 @@
     <link th:href="@{/css/sub.css}" rel="stylesheet">
 
     <script th:src="@{/js/jquery.min.js}"></script>
-    <script th:src="@{/js/popper.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
-    <script th:src="@{/js/bootstrap-slider.js}"></script>
-    <script th:src="@{/js/tether.min.js}"></script>
-    <script th:src="@{/js/jquery.raty-fa.js}"></script>
-    <script th:src="@{/js/script.js}"></script>
+<!--    <script th:src="@{/js/popper.min.js}"></script>-->
+<!--    <script th:src="@{/js/bootstrap.min.js}"></script>-->
+<!--    <script th:src="@{/js/bootstrap-slider.js}"></script>-->
+<!--    <script th:src="@{/js/tether.min.js}"></script>-->
+<!--    <script th:src="@{/js/jquery.raty-fa.js}"></script>-->
+<!--    <script th:src="@{/js/script.js}"></script>-->
 
     <!--  CLEditor -->
     <!--<link rel="stylesheet" th:href="@{/css/common.css}"/>-->
