--- a/src/main/resources/templates/include/script.html
+++ b/src/main/resources/templates/include/script.html
@@ -4,12 +4,17 @@
 <th:block th:fragment="script">
 
     <!-- searchList 버그로 head.html로 옮김 -->
-    <!--<script th:src="@{/js/jquery.min.js}"></script>-->
+    <script th:src="@{/js/jquery.min.js}"></script>
 
     <!-- productDetail 버그로 주석 처리함 -->
     <!--<script th:src="@{/js/slick.min.js}"></script>-->
 <!--    <script th:src="@{/js/jquery.nice-select.min.js}"></script>-->
-
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/bootstrap-slider.js}"></script>
+    <script th:src="@{/js/tether.min.js}"></script>
+    <script th:src="@{/js/jquery.raty-fa.js}"></script>
+    <script th:src="@{/js/script.js}"></script>
 
 </th:block>
 </html>
